<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textColor="@color/black" />

    <com.albertukrida.capstoneproject_animalsnap.ui.custom_view.MyEditText
        android:id="@+id/ed_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/name_hint"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:background="@drawable/shape_edit_text"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="24dp"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:text="@string/next"/>
    </LinearLayout>
</LinearLayout>