<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background_gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginVertical="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_green"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_button_white"
                    android:text="@string/register"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_transparent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="8dp"
                android:paddingVertical="16dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:alpha="0" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/email"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:alpha="0" />

                    <com.albertukrida.capstoneproject_animalsnap.ui.custom_view.MyEditText
                        android:id="@+id/ed_login_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/email_hint"
                        android:textSize="16sp"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/shape_edit_text"
                        android:alpha="0"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/password"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:alpha="0" />

                    <com.albertukrida.capstoneproject_animalsnap.ui.custom_view.MyEditText
                        android:id="@+id/ed_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/pass_hint"
                        android:textSize="16sp"
                        android:inputType="textPassword"
                        android:background="@drawable/shape_edit_text"
                        android:alpha="0"
                        android:importantForAutofill="no" />

                    <CheckBox
                        android:id="@+id/cb_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/show_password"
                        android:textStyle="italic"
                        android:textColor="@color/black"
                        android:buttonTint="@color/black"
                        android:alpha="0" />
                </LinearLayout>

                <com.albertukrida.capstoneproject_animalsnap.ui.custom_view.MyButton
                    android:id="@+id/btnSubmitLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="56dp"
                    android:layout_marginVertical="16dp"
                    android:enabled="false"
                    android:alpha="0" />

                <TextView
                    android:id="@+id/tv_resend_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/resendEmail"
                    android:textSize="14sp"
                    android:gravity="center_vertical"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>