<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblCurrentBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/camera"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:paddingHorizontal="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/border_transparent"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/pick_from_camera" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_from_camera"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:drawableTint="@color/black"
                app:drawableTopCompat="@drawable/ic_baseline_camera_alt_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp" >
            <ImageView
                android:id="@+id/iv_gallery"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/border_transparent"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/select_from_gallery" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_from_gallery"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:drawableTint="@color/black"
                app:drawableTopCompat="@drawable/ic_baseline_photo_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="2dp"
        android:text="@string/history"
        android:background="@drawable/border_top_bottom"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="16dp"/>
</LinearLayout>